# oz-backend-sazo

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml  test.sh
.github/workflows/: checks.yml
apps/accounts/: apps.py  models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/common/: models.py
apps/transactions/: models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
