[tool.poetry]
name = "oz-backend-sazo"
version = "0.1.0"
description = ""
authors = ["ParkKangbin <6883997@naver.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
psycopg = { version = ">=3.2.1", extras = ["binary"] }
asgiref = "^3.9.1"
pyjwt = "^2.9.0"
sqlparse = "^0.5.3"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"